--- a/styles/styles.css
+++ b/styles/styles.css
@@ -356,3 +356,42 @@ main{
     width: 20px;
 }
 
+.check p{
+    color: #001931;
+    font-size: 16px;
+    font-weight: 500px;
+    color: #001931;
+}
+
+.conclusion-container{
+    height: 506px;
+    width: 1600px;
+    padding: 120px;
+}
+
+.conclusion{
+    height: 384px;
+    width: 1360px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    padding-left: 40px;
+    padding-right: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.txt-area h1{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+
+}
+
+.txt-area p{
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    color: #627382;
+}
