--- a/styles/styles.css
+++ b/styles/styles.css
@@ -370,6 +370,7 @@ main{
 }
 
 .conclusion{
+    background-color: #F7F6F2 ;
     height: 384px;
     width: 1360px;
     padding-top: 80px;
@@ -386,6 +387,7 @@ main{
     font-size: 40px;
     font-weight: 700;
     text-align: center;
+    margin-bottom: 16px;
 
 }
 
@@ -393,5 +395,34 @@ main{
     font-size: 16px;
     font-weight: 400;
     text-align: center;
+    color: #627382;
+}
+
+.button-area{
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-area button{
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    background-color: #30B868;
+    color: white;
+    width: 194px;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    cursor: pointer;    
+}
+
+.button-area p{
+    font-size: 16px;
+    font-weight: 400;
     color: #627382;
 }
