--- a/styles/styles.css
+++ b/styles/styles.css
@@ -426,3 +426,86 @@ main{
     font-weight: 400;
     color: #627382;
 }
+
+footer{
+    height: 348px;
+    width: 1600px;
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-top: 120px;
+    padding-bottom: 30px;
+    background-color: #001931;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+}
+.footer-logo-container{
+    height: 64px;
+    width: 1360px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+.footer-logo{
+    height: 60px;
+    width: 350px;
+}
+.footer-logo img{
+    height: 60px;
+    width: 139px;
+}
+
+.social{
+    width: 220px;
+    height: 64px;
+}
+
+.social p{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.social-logo{
+    display: flex;
+    gap: 16px;
+}
+
+.social-logo a{
+    height: 20px;
+    width: 20px;
+    background-color: #F7F6F2;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+
+}
+
+.footer-bottom{
+    height: 54px;
+    width: 1360px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    text-align: center;
+}
+
+.footer-bottom p{
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.footer-bottom hr {
+    opacity: 20%;
+    border: none;
+    height: 1px;
+    background-color: #E5E7EB;
+}
+
+
+
