--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,34 +100,37 @@ main{
 }
 
 .early-access p{
-    color: #30B868;
+    color: #30b869;
     font-size: 16;
 }
 
-.circle{
-    height: 16px;
-    width: 16px;
-    background-color: #30B868;
-    opacity: 20%;
-    border-radius: 50px;
-
+.circle {
+  width: 16px;
+  height: 16px;
+  background-color: rgba(48, 184, 104, 0.2);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.outer{
-    height: 12px;
-    width: 12px;
-    background-color: #30B868;
-    opacity: 40%;
-
+.outer {
+  width: 12px;
+  height: 12px;
+  background-color: rgba(48, 184, 104, 0.4);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.inner{
-    height: 6px;
-    width: 6px;
-    background-color: #30B868;
-    opacity: 100%;
+.inner {
+  width: 6px;
+  height: 6px;
+  background-color: rgba(48, 184, 104, 1);
+  border-radius: 50%;
 }
+
 
 .moto-txt{
     width: 770px;
