--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,7 +288,9 @@ main{
 .solution-container{
     height: 840px;
     width: 1600px;
-    padding: 120px;
+    padding-bottom: 120px;
+    padding-left: 120px;
+    padding-right: 120px;
 }
 
 .solution{
